--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 
-    <title>Better Furniture makes Life Better|Chattel Summer</title>
-    <meta name="keywords" content="House Furniture Barbados">
+    <title>Barbadian Preowned Furniture & Accessories|Chattel Summer</title>
+    <meta name="keywords" content="Preowned or Second Hand Furniture Barbados">
     <meta name="description" content="Invest in quality preowned, gently-used cupboards, Table, Chairs for Living, dining and 
     bedrooms fairly priced">
   </head>
@@ -79,13 +79,29 @@
  <!-- <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   </div>-->
+  <div class="row">
+    <div class="column0">
+      <img src="Images/tv-stands-lead-1673300741.jpg" alt="Side Table" style="width: 100%">
+    </div>
+  
+    <div class="column3">
+      <h1 class="uppercase">Get Notified</h1> <br> 
+    <h4 class="uppercase">10am - 4pm, Sat only.</h4>
+    <h2 class="uppercase"> Baxter's, St.Andrew</h2>
+    <p class="uppercase">(Be sure to receive new locations to shop and save</p>
+      <p class="uppercase"> every single time)</p><br>
+    <!--<p class="upperclass"></p><br>
+    <p></p>-->
+  <a href="mail.html" target="_self"><button class="filter-btn">Get Savings</button></a>
+    </div>
+  </div>
 
   <div class="column2">
     <h2>Chattel Summer</h2>
   <h4 class="underline"></h4>
-  <h4>Hi, Get ready to explore the collection:home furnishings and housewares</h4>  
-  <h2>Discover finds which have<br> been preowned and gently<br> used from a range of <br>private collections
-    and dealers.</h2><br>
+  <h2>"Cozy for All"</h2>  
+  <h4>Pocket-smart Furniture & Accessories<br> preowned and gently used<br>from a range of <br>private collections
+    and dealers.</h4><br>
 
 
   </div>
@@ -126,7 +142,7 @@
   </div>
 </div>-->
 
-<div class="row">
+<!--<div class="row">
   <div class="column0">
     <img src="Images/tv-stands-lead-1673300741.jpg" alt="Side Table" style="width: 100%">
   </div>
@@ -139,9 +155,9 @@
     <p class="uppercase">upcoming collections</p><br>
   <!--<p class="upperclass"></p><br>
   <p></p>-->
-<a href="mail.html" target="_self"><button class="filter-btn">Sign Me Up!</button></a>
+<!--<a href="mail.html" target="_self"><button class="filter-btn">Sign Me Up!</button></a>
   </div>
-</div>
+</div>-->
 
 <!--End one-->
 
