--- a/mail.html
+++ b/mail.html
@@ -74,7 +74,7 @@
     <!--alert messages end-->
     
     <center>
-        <h2>Have a first look at Drop Updates</h2>
+        <h2>Have a first look at New Updates</h2>
         <form class="contact" action="https://formsubmit.co/chattelenterprise@gmail.com" method="post"><br><br>
           <input type="text" name="name" class="text-box" placeholder="Your Name" required><br><br>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required><br><br>
