--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
     </div>
   
     <div class="column3">
-      <h2>Chattel Summer</h2>
+      <h2>Baxter's, St.Andrew</h2>
       <h4 class="underline"></h4>
     <h4 class="uppercase">10am - 4pm, Sat only.</h4>
-    <h2 class="uppercase"> Baxter's, St.Andrew</h2>
+    <h2 class="uppercase"></h2>
     <p class="uppercase">(Be sure to receive new locations to shop and save</p>
       <p class="uppercase"> every single time)</p><br>
     <!--<p class="upperclass"></p><br>
