--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
     <img src="Images/beach-picnic.jpg" alt="Kitchen cupboards" style="width: 100%">
   </div>
 
-  <div class="column3">
+  <!--<div class="column3">
   <h1 class="uppercase">Photos</h1> <br>
   <h4 class="uppercase">Christmas Countdown Treats</h4>
   <h2 class="uppercase">Refresh and reorganise</h2>
   <p class="uppercase">with chairs, coffee table and multi-shelf cabinets</p>
     <!--<p class="uppercase"></p><br>-->
-  <p>LIMITED PIECES AVAILABLE</p>
+  <!--<p>LIMITED PIECES AVAILABLE</p>
   <p> In-person Drop: coming soon</p><br>
 <a href="product.html" target="_self"><button class="filter-btn">Preview Furniture</button></a>
-  </div>
+  </div>-->
 </div>
 
 <!--
@@ -165,8 +165,8 @@
 <!--Sart two-->
 <div class="container">
   <div class="content">
-    <h1> Next Drop: Baxters, St.Andrew BB</h1>
-    <h1> Directions: Whatsapp 1-246-830-4034</h1>
+    <h1> Why Choose Chattel Summer?</h1>
+    <h1> </h1>
     <!--<p>Shop the drop <span>Sunday, 1 June 2023, 9:00am</span></p>-->
     <p id="demo"></p>
 
@@ -187,13 +187,19 @@
         you can make the right investment to your lifestyle.  
       </h1>-->
 
-      <h3 class="underline"></h3>
+      <!--<h3 class="underline"></h3>
       <h2>About Us</h2>
       <p>We create new home comforts<br> 
         with home furnishings and<br> housewares
         for clutter-freeness,<br> organisation and
-        holiday summer enjoyment.</p>
+        holiday summer enjoyment.</p>-->
 
+        <h3 class="underline"></h3>
+      <h2>Pick Your Perfect Fit</h2>
+      <p>The furniture and accessories<br> 
+        have lived in other places<br>;
+        you'll be giving them a new life.<br> Pick the best fit for your room needs.</p>
+        <a href="product.html" target="_self"><button class="filter-btn">Pick Furniture</button></a>
     </div>
       
 
