--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <h2>"Cozy for All"</h2>  
   <h4>Pocket-smart Furniture & Accessories<br> preowned and gently used<br>from a range of <br>private collections
     and dealers.</h4><br>
-
+    <a href="product.html" target="_self"><button class="filter-btn">Pick Furniture</button></a>
 
   </div>
 </div>
