--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     <h2>Chattel Summer</h2>
   <h4 class="underline"></h4>
   <h2>"Cozy for All"</h2>  
-  <h4>Pocket-smart Furniture & Accessories<br> preowned and gently used<br>from a range of <br>private collections
-    and dealers.</h4><br>
-    <a href="product.html" target="_self"><button class="filter-btn">Pick Furniture</button></a>
+  <h4>Pocket-smart Furniture & Accessories<br> preowned and gently used<br>, superior savings range from <br> 
+  $1000- $6000 per room.</h4><br>
+    <a href="product.html" target="_self"><button class="filter-btn">Get Savings</button></a>
 
   </div>
 </div>
