--- a/index.html
+++ b/index.html
@@ -101,8 +101,11 @@
     <h2>Chattel Summer</h2>
   <h4 class="underline"></h4>
   <h2>"Cozy for All"</h2>  
-  <h4>Pocket-smart Furniture & Accessories<br> preowned and gently used<br>, superior savings range from <br> 
-  $1000- $6000 per room.</h4><br>
+  <h4>Pocket-smart Furniture & Accessories<br> preowned and gently used.<br> Why pay more when you can
+    save now?<br> Save between $1000- $6000 per room.<br> 
+   That's superior savings when compared to buying<br>
+pocket draining expensive furniture.
+</h4><br>
     <a href="product.html" target="_self"><button class="filter-btn">Get Savings</button></a>
 
   </div>
