--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <h2>Chattel Summer</h2>
   <h4 class="underline"></h4>
   <h2>"Cozy for All"</h2>  
-  <h4>Pocket-smart Furniture & Accessories<br> preowned and gently used.<br> Why pay more when you can
-    save now?<br> Save between $1000- $6000 per room.<br> 
+  <h4><br> Make yourself cozy with savings ranging between $1000- $6000 per room.<br> 
    That's superior savings when compared to buying<br>
-pocket draining expensive furniture.
+pocket draining expensive furniture. <br> Why pay more when you can
+save now?
 </h4><br>
     <a href="product.html" target="_self"><button class="filter-btn">Get Savings</button></a>
 
