--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <h4 class="underline"></h4>
   <h2>"Cozy for All"</h2>  
   <h4><br> Make yourself cozy with savings ranging between $1000- $6000 per room.<br> 
-   That's superior savings when compared to buying<br>
+   That's superior savings when compared to buying
 pocket draining expensive furniture. <br> Why pay more when you can
 save now?
 </h4><br>
