--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ save now?
         <h3 class="underline"></h3>
       <h2>Pick Your Perfect Fit</h2>
       <p>The furniture and accessories<br> 
-        have lived in other places<br>;
+        have lived in other places;
         you'll be giving them a new life.<br> Pick the best fit for your room needs.</p>
         <a href="product.html" target="_self"><button class="filter-btn">Pick Furniture</button></a>
     </div>
