--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
   </div>
 
   <div class="column2">
-    <h2>Chattel Summer</h2>
-  <h4 class="underline"></h4>
+   <!-- <h2>Chattel Summer</h2>-->
   <h2>"Cozy for All"</h2>  
+  <h4 class="underline"></h4>
   <h4><br> Make yourself cozy with savings ranging between $1000- $6000 per room.<br> 
    That's superior savings when compared to buying
 pocket draining expensive furniture. <br> Why pay more when you can
