Updated Mail and Product Page
Adding location

--- a/product.html
+++ b/product.html
@@ -78,12 +78,13 @@
 <section class="menu">
   <!-- title -->
   <div class="title">
-    <h2>Shop the Drop</h2>
+    <h2>Shop the Location</h2>
     <div class="underline"></div>
-    <h3>location: Baxters, St. Andrew BB</h3>
+    <h3>April 30th: 10am - 4pm, Sat only</h3>
+    <a href="mail.html" target="_self"><button class="filter-btn">Get Directions</button></a>
   </div>
   <!-- filter buttons -->
-  <div class="btn-container">
+  <!--<div class="btn-container">
     <button type="button" class="filter-btn" data-id="all">all</button>
     <button type="button" class="filter-btn" data-id="light">
       light tone
@@ -95,11 +96,11 @@
     <button type="button" class="filter-btn" data-id="big">
       big space
     </button>
-  </div>
+  </div>-->
   <!-- menu items -->
-  <div class="section-center">
+  <!--<div class="section-center">-->
     <!-- single item1 -->
-    <article class="menu-item">
+    <!--<article class="menu-item">
       <img src="Images/tvarmoireosei.jpg" alt="menu item" class="photo" />
       <div class="item-info">
         <header>
@@ -116,7 +117,7 @@
          </p>
 
       </div>
-    </article>
+    </article>-->
     <!-- end of single item -->
     <!-- single item2 --><!--
     <article class="menu-item">
