Update Mail and Homepage
Copywriting Changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
   
     <div class="column3">
-      <h2>Baxter's, St.Andrew</h2>
+      <h2>Shop on Location</h2>
       <h4 class="underline"></h4>
     <h4 class="uppercase">10am - 4pm, Sat only.</h4>
     <h2 class="uppercase"></h2>
