--- a/mail.html
+++ b/mail.html
@@ -92,7 +92,7 @@
           <h2>Shop the Location</h2>
           <div class="underline"></div>
           <h3>April 30th: 10am - 4pm, Sat only</h3>
-          
+          <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3272.0953965521107!2d-59.568783925824356!3d13.223253209312855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTPCsDEzJzIzLjciTiA1OcKwMzMnNTguNCJX!5e1!3m2!1sen!2s!4v1713365149435!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
  <center>
  <!--contact section end-->
