--- a/product.html
+++ b/product.html
@@ -78,9 +78,9 @@
 <section class="menu">
   <!-- title -->
   <div class="title">
-    <h2>Shop the Location</h2>
+    <h2>Shop Every Location</h2>
     <div class="underline"></div>
-    <h3>April 30th: 10am - 4pm, Sat only</h3>
+    <h3>10am - 4pm, Sat only</h3>
     <a href="mail.html" target="_self"><button class="filter-btn">Get Directions</button></a>
   </div>
   <!-- filter buttons -->
@@ -155,6 +155,14 @@
 </section>
 <div class="btn-container">
   <button class="button">See Location</button>
+  <div style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGCr5I-sss&#x2F;-tgP_Bc374vYAIqwmQdiHQ&#x2F;watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGCr5I-sss&#x2F;-tgP_Bc374vYAIqwmQdiHQ&#x2F;watch?utm_content=DAGCr5I-sss&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Copy of Add a heading</a> by T Thompson
 </div>
 
 <!--Footer-->
