--- a/product.html
+++ b/product.html
@@ -153,11 +153,6 @@
     </article>-->
     <!-- end of single item -->
 </section>
-<div class="btn-container">
-  <button class="button">See Location</button>
-  
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGCr5I-sss&#x2F;-tgP_Bc374vYAIqwmQdiHQ&#x2F;watch?utm_content=DAGCr5I-sss&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Copy of Add a heading</a> by T Thompson
-</div>
 <div style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
@@ -165,6 +160,11 @@
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGCr5I-sss&#x2F;-tgP_Bc374vYAIqwmQdiHQ&#x2F;watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGCr5I-sss&#x2F;-tgP_Bc374vYAIqwmQdiHQ&#x2F;watch?utm_content=DAGCr5I-sss&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a> 
+<!--<div class="btn-container">
+  <button class="button">See Location</button>
+  </div>-->
 <!--Footer-->
 <div id= "footer-fix">
   <footer class= "footer">
