--- a/product.html
+++ b/product.html
@@ -153,6 +153,12 @@
     </article>-->
     <!-- end of single item -->
 </section>
+<div class="title">
+  <h2>Shop the Location</h2>
+  <div class="underline"></div>
+  <h3>April 30th: 10am - 4pm, Sat only</h3>
+</div>
+
 <div style="position: relative; width: 100%; height:; padding-top: 177.7778%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
