--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="column3">
       <h2>Shop on Location</h2>
       <h4 class="underline"></h4>
-    <h4 class="uppercase">10am - 4pm, Sat only.</h4>
+    <h4 class="uppercase">10am - 4pm, Weekly.</h4>
     <h2 class="uppercase"></h2>
     <p class="uppercase">(Be sure to receive new locations to shop and save</p>
       <p class="uppercase"> every single time)</p><br>
