--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ save now?
 
 <div class="row">
   <div class="column1">
-    <img src="Images/beach-picnic.jpg" alt="Kitchen cupboards" style="width: 100%">
+    <img src="Images/Man_Dollhouse.jpg" alt="Kitchen cupboards" style="width: 100%">
   </div>
 
   <!--<div class="column3">
